test_suite/tests/ui/enum-representation/untagged-default.stderr
error: #[serde(default)] can only be used on variants of internally tagged enums
 --> tests/ui/enum-representation/untagged-default.rs:7:5
  |
7 | /     #[serde(default)]
8 | |     V2 { f: u8 },
  | |________________^
